@@ -32,6 +32,9 @@ Additional API Changes:
   * [MESOS-4735] - Add 'filename' field to CommandInfo.URI in Scheduler API
     and v1 Scheduler HTTP API.
 
+  * [MESOS-5014] - Changes Call and Event Type enums in scheduler.proto
+    from required to optional for the purpose of backwards compatibility.
+
 
 Release Notes - Mesos - Version 0.28.0
 --------------------------------------------
